--- a/static/index.html
+++ b/static/index.html
@@ -4,9 +4,21 @@
   <title>Seattle Network Choices</title>
   <meta http-equiv='Content-Type' content='text/html;charset=utf-8' />
   <link href='/static/style.css' rel='stylesheet' type='text/css' />
-  <script type='text/javascript src='/static/client.js'></script>
+  <script type='text/javascript' src='/static/client.js'></script>
+
+  <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+  <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.6/mapbox.css' rel='stylesheet' />
+	<script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.6/mapbox.js'></script>
 </head>
 <body>
-Seattle Network Choices
+  <header>
+    <h1>Seattle Network Choices</h1>
+  </header>
+  <section id='test'>
+    <button>Test</button>
+  </section>
+  <section id='map-sec'>
+    <div id='map'></div>
+  </section>
 </body>
 </html>
