--- a/static/index.html
+++ b/static/index.html
@@ -9,13 +9,16 @@
   <script src="//code.jquery.com/jquery-1.10.2.js"></script>
   <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.6/mapbox.css' rel='stylesheet' />
 	<script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.6/mapbox.js'></script>
+  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script src="/static/ndt_d3.js"></script>
+  <script src='/static/ndt-browser-client.js'></script>
 </head>
 <body>
   <header>
     <h1>Seattle Network Choices</h1>
   </header>
   <section id='test'>
-    <button>Test</button>
+    <div id="testsvg"></div>
   </section>
   <section id='map-sec'>
     <div id='map'></div>
