--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,7 @@
 <html lang='en-US'>
 <head>
   <title>Seattle Network Choices</title>
+  <link rel="icon" type="image/png" href="../" 
   <meta http-equiv='Content-Type' content='text/html;charset=utf-8' />
   <link href='/static/style.css' rel='stylesheet' type='text/css' />
   <script type='text/javascript' src='/static/client.js'></script>
@@ -15,7 +16,7 @@
     <h1>Seattle Network Choices</h1>
   </header>
   <section id='test'>
-    <button>Test</button>
+    <button id='orangebutton'>Test</button>
   </section>
   <section id='map-sec'>
     <div id='map'></div>
