--- a/static/index.html
+++ b/static/index.html
@@ -2,28 +2,47 @@
 <html lang='en-US'>
 <head>
   <title>Seattle Network Choices</title>
-  <link rel="icon" type="image/png" href="../" 
   <meta http-equiv='Content-Type' content='text/html;charset=utf-8' />
+  
   <link href='/static/style.css' rel='stylesheet' type='text/css' />
+  
+   <!-- Bootsrap CDN -->
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+
   <script type='text/javascript' src='/static/client.js'></script>
 
   <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+  
   <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.6/mapbox.css' rel='stylesheet' />
-	<script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.6/mapbox.js'></script>
+  
+  <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.6/mapbox.js'></script>
   <script src="http://d3js.org/d3.v3.min.js"></script>
+  
   <script src="/static/ndt_d3.js"></script>
+  
   <script src='/static/ndt-browser-client.js'></script>
+   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <header>
-    <h1>Seattle Network Choices</h1>
-  </header>
+  <nav class="navbar navbar-transparent "> 
+    <h1>
+      <img src="static/images/cfs.png" alt="Codeforlogo " height="100" width="100">
+    </h1>
+              <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#"></a>
+          </div>
+
+      
+        </div><!--/.container-fluid -->
+  </nav>
   <section id='test'>
-<<<<<<< HEAD
-    <button id='orangebutton'>Test</button>
-=======
     <div id="testsvg"></div>
->>>>>>> origin/master
   </section>
   <section id='map-sec'>
     <div id='map'></div>
