--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv='Content-Type' content='text/html;charset=utf-8' />
   
   <link href='/static/style.css' rel='stylesheet' type='text/css' />
+  <link rel="icon" type="image/png" href="static/images/favicon.png">
+
   
    <!-- Bootsrap CDN -->
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
@@ -24,17 +26,17 @@
    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-default "> 
+  <nav class="navbar navbar-transparent "> 
     <h1>
       <img src="static/images/cfs.png" alt="Codeforlogo " height="100" width="100">
     </h1>
               <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
-            </button>
+            </button> -->
             <a class="navbar-brand" href="#"></a>
           </div>
 
@@ -45,9 +47,11 @@
     
     <div id="testsvg"></div>
   </section>
+  
   <section id='map-sec'>
     <div id='map'></div>
   </section>
+
 </body>
 </html>
 
