--- a/static/index.html
+++ b/static/index.html
@@ -3,30 +3,36 @@
 <head>
   <title>Seattle Network Choices</title>
   <meta http-equiv='Content-Type' content='text/html;charset=utf-8' />
-  
+
   <link href='/static/style.css' rel='stylesheet' type='text/css' />
   <link rel="icon" type="image/png" href="static/images/favicon.png">
 
-  
+
    <!-- Bootsrap CDN -->
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 
   <script type='text/javascript' src='/static/client.js'></script>
 
   <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-  
+
   <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.6/mapbox.css' rel='stylesheet' />
-  
+
   <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.6/mapbox.js'></script>
   <script src="http://d3js.org/d3.v3.min.js"></script>
-  
+
   <script src="/static/ndt_d3.js"></script>
-  
+
   <script src='/static/ndt-browser-client.js'></script>
+  <script src='/static/welcome.js'></script>
    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+   <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
 </head>
 <body>
-  <nav class="navbar navbar-transparent "> 
+  <nav class="navbar navbar-transparent ">
     <h1>
       <img src="static/images/cfs.png" alt="Codeforlogo " height="100" width="100">
     </h1>
@@ -40,18 +46,21 @@
             <a class="navbar-brand" href="#"></a>
           </div>
 
-      
+
         </div><!--/.container-fluid -->
   </nav>
   <section id='test'>
-    
+
     <div id="testsvg"></div>
   </section>
-  
+
   <section id='map-sec'>
     <div id='map'></div>
   </section>
+  <div id="dialog" title="SEANetMap">
+  <p>SEANetMap is a join project between M-Labs and Code for Seattle with the goal of developing an open source codebase for citizens to run broadband network performance tests and compare their results with what others are experiencing across an area and/or network providers. The aggregate results dataset is publicly available as a social good for further analysis. Initially, the project will be specific to Seattle, yet it is a goal to make the codebase reusable in other localities.</p>
+</div>
+
 
 </body>
 </html>
-
