embedder.html is test not main code so moved it out to /test/

--- a/test/embedder.html
+++ b/test/embedder.html
@@ -10,6 +10,6 @@
 <h1>Seattle.gov: Reigning over Rain City</h1>
 This page serves simply to confirm that the main index.html (the client app) can be embedded in other pages.
 <br/><br/>
-<iframe src='/' style='overflow:hidden; display:block; position: absolute; height: 100%; width: 100%; border:2px solid #000000' />
+<iframe src='http://127.0.0.1:8000' style='overflow:hidden; display:block; position: absolute; height: 100%; width: 100%; border:2px solid #000000' />
   </body>
 </html>
