UI of embedder make to look like seattle.gov

--- a/test/embedder.html
+++ b/test/embedder.html
@@ -5,11 +5,29 @@
     <style type='text/css'>
       html, body { height: 100% }
     </style>
+    <style type='text/css'>
+      .city_text{
+        font-weight: bold;
+        color: rgb(0, 125, 195);
+        font-family: LeagueGothicRegular, Arial, sans-serif;
+        font-size: 21.25px;
+        line-height: 18.0625px;
+        text-transform: uppercase;
+        }
+      .body_text{
+        font-family: arial, helvetica, clean, sans-serif;
+        }
+    </style>
   </head>
-  <body>
-<h1>Seattle.gov: Reigning over Rain City</h1>
-This page serves simply to confirm that the main index.html (the client app) can be embedded in other pages.
+  <body style='background-image:url(http://www.seattle.gov/assets/prebuilt/img/header_background.png);background-repeat: no-repeat;'>
+    <img src='http://www.seattle.gov/assets/images/2010_IMG/SeattleGovLogoHome.png' /><br/>
+    <span class='city_text'>Reigning over rain city</span>
 <br/><br/>
+<span class='body_text'>This page serves simply to confirm that the tool can can be embedded in other pages.</span>
+<br/><br/>
+<br/><br/>
+<br/><br/>
+
 <iframe src='http://127.0.0.1:8000' style='overflow:hidden; display:block; position: absolute; height: 100%; width: 100%; border:2px solid #000000' />
   </body>
 </html>
