Folding in bq2geojson and its depsy

--- a/test/embedder.html
+++ b/test/embedder.html
@@ -28,6 +28,6 @@
 <br/><br/>
 <br/><br/>
 
-<iframe src='http://127.0.0.1:8000' style='overflow:hidden; display:block; position: absolute; height: 100%; width: 100%; border:2px solid #000000' />
+<iframe src='/' style='overflow:hidden; display:block; position: absolute; height: 100%; width: 100%; border:2px solid #000000' />
   </body>
 </html>
